--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </nav>
     </header>
 
-    <div class="hero" alt="Team working and analysis"></div>
+    <div>
+        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="Digital marketing meeting Team working on a project" class="hero"/>
+    </div>
     <main class="content">
         <article id="search-engine-optimization" class="search-engine-optimization"> <!-- Fixed link-->
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left"/>
