--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <!-- Updated HTM semantics-->
+        <nav>    
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
@@ -21,7 +22,7 @@
     </header>
 
     <div>
-        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="Digital marketing meeting Team working on a project" class="hero"/>
+        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="Digital marketing meeting Team working on a project" class="hero"/>  <!-- Updated for accessibility-->
     </div>
     <main class="content">
         <article id="search-engine-optimization" class="search-engine-optimization"> <!-- Fixed link-->
@@ -34,6 +35,7 @@
             </p>
         </article>
 
+        <!-- Updated HTM semantics-->
         <article id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="on-line reputation management" class="float-right"/>
             <h2>Online Reputation Management</h2>
@@ -44,6 +46,7 @@
             </p>
         </article>
 
+        <!-- Updated HTM semantics-->
         <article id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left"/>
             <h2>Social Media Marketing</h2>
@@ -56,21 +59,21 @@
         </main>
     
     <section class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefit-lead">  <!-- Updated HTM semantics-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation pictogram"/>
             <p>Inbound strategies for lead generation require less work for your business,
                  bringing customers directly to your website.
             </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefit-brand"> <!-- Updated HTM semantics-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awarness pictogram"/>
             <p>Users find your business through paid and organic searches, increasing the
                  search ranking and visibility for your business.
             </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefit-cost"> <!-- Updated HTM semantics-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management pictogram"/>
             <p>As the search ranking for your business increases, your advertising costs
@@ -79,6 +82,7 @@
         </aside>
     </section>
 
+    <!-- Updated HTM semantics-->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
